--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,8 @@
   <link rel="shortcut icon" href="#">
   </head>
   <body>
-    <div class = "content">
       <div class = "side">
-        <div class = "title">todolist</div>
+        <div class = "title"><img src=<%=require("./img/todolist.svg")%>></div>
         <div class = "nav">
           <ul class = "nav__links other-nav">
             <li class = "link" id="all">All tasks<div class ="count"></div></li>
@@ -23,14 +22,14 @@
 
         <div class = "nav">
           <div class ="nav-header">
-            <div class="nav-section">Lists</div>
+            <div class="nav-section">YOUR LISTS</div>
             <div class = "create-list-btn">+ Create list</div>
           </div>
             <ul class = "nav__links list-nav" id="list-nav">
           </ul>
         </div>
       </div>
-
+      
       <div class ="main">
         <div class ="main__header">
           <div class="main-title"></div>
@@ -40,24 +39,20 @@
       </div>
 
       <div class = "create-task-modal">
-        <div class ="modal-title">Add a new task</div>
+        <div class ="modal-title">Add a new task
+          <div class ="close"><img class ="close" src=<%=require("./img/closex.svg")%>></div>
+        </div>
         <div class = "create-modal__content">
-          <div class = "create-modal__nav">
-            <ul class ="nav__links">
-              <li class = "new-type" id="new-task">Task</li>
-              <li class="new-type" id="new-list">List</li>
-            </ul>
-          </div>
-          <form id = "task-form">
-            New Task
+          <form id = "task-form" onsubmit="return false">
             <label for="title">Title*</label>
             <input type="text" id="title" required>
             <label for="notes">Notes</label>
             <textarea rows="5" id="notes"></textarea>
-            <label for="duedate">Due date</label>
-            <input type="date" id="duedate" max="2030-12-31">
+            <label for="duedate">Due date*</label>
+            <input type="date" id="duedate" max="2030-12-31" required>
+            Priority*
             <div class ="radio-group">
-              <input type="radio" id="priority1" value="High" name="priority">
+              <input type="radio" id="priority1" value="High" name="priority" required>
               <label for="priority1">High</label>
               <input type="radio" id="priority2" value="Medium" name="priority">
               <label for="priority2">Medium</label>
@@ -65,27 +60,56 @@
               <label for="priority3">Low</label>
             </div>
             <div class="add">
-              <button type="button" id="add-btn">Add to do</button>
+              <button type="submit" id="add-btn">Add task</button>
+            </div>
+          </form>
+        </div>
+      </div>
+
+      <div class = "edit-task-modal">
+        <div class ="modal-title">Edit task
+          <div class ="close"><img class ="close" src=<%=require("./img/closex.svg")%>></div>
+        </div>
+        <div class = "create-modal__content">
+          <form id = "task-form" onsubmit="return false">
+            <label for="edit-title">Title*</label>
+            <input type="text" id="edit-title" required>
+            <label for="edit-notes">Notes</label>
+            <textarea rows="5" id="edit-notes"></textarea>
+            <label for="edit-duedate">Due date*</label>
+            <input type="date" id="edit-duedate" max="2030-12-31" required>
+            Priority*
+            <div class ="radio-group">
+              <input type="radio" id="edit-priority1" value="High" name="edit-priority">
+              <label for="edit-priority1" required>High</label>
+              <input type="radio" id="edit-priority2" value="Medium" name="edit-priority">
+              <label for="edit-priority2">Medium</label>
+              <input type="radio" id="edit-priority3" value="Low" name="edit-priority">
+              <label for="edit-priority3">Low</label>
+            </div>
+            <div class="add">
+              <button type="submit" id="edit-task-btn">Save changes</button>
             </div>
           </form>
         </div>
       </div>
 
       <div class = "create-list-modal">
-        <div class ="modal-title">Create a new list</div>
+        <div class ="modal-title">
+          Create a new list
+          <div class ="close"><img class ="close" src=<%=require("./img/closex.svg")%>></div>
+        </div>
         <div class = "create-modal__content">
-          <form id = "list-form">
-            New List
+          <form id = "list-form" onsubmit="return false">
             <label for="list-name">Name*</label>
             <input type="text" id="list-name" required>
             <label for="list-desc">Description</label>
             <textarea rows="5" id="list-desc"></textarea>
             <div class="add">
-              <button type="button" id="add-list-btn">Create list</button>
+              <button type="submit" id="add-list-btn">Create list</button>
             </div>
           </form>
         </div>
-      </div>
 
     </div>
   </body>
